version/0.16/_sources/api/solver/_autosummary/settings/append_data.rst.txt
:orphan:

.. _append_data:

append_data
===========

.. autoclass:: ansys.fluent.core.solver.settings_232.append_data.append_data
    :show-inheritance:

.. rubric:: Included in:

======================================================   =====================================================

Parent                                                                                                 Summary

======================================================   =====================================================
:ref:`mass_flow <mass_flow_1>`                                     Print mass flow rate at inlets and outlets.

:ref:`heat_transfer <heat_transfer>`                                   Print heat transfer rate at boundaries.

:ref:`heat_transfer_sensible <heat_transfer_sensible>`        Print sensible heat transfer rate at boundaries.

:ref:`rad_heat_trans <rad_heat_trans>`                       Print radiation heat transfer rate at boundaries.

:ref:`film_mass_flow <film_mass_flow>`                                Print film mass flow rate at boundaries.

:ref:`film_heat_transfer <film_heat_transfer>`                    Print film heat transfer rate at boundaries.

:ref:`electric_current <electric_current>`                          Print electric current rate at boundaries.

:ref:`pressure_work <pressure_work_1>`                          Print pressure work rate at moving boundaries.

:ref:`viscous_work <viscous_work>`                                      Print viscous work rate at boundaries.

:ref:`forces <forces>`                                                                       'forces' command.

:ref:`surface_integrals <surface_integrals>`                                 Create a surface integral report.

:ref:`volume_integrals <volume_integrals>`                                    Create a volume integral report.

======================================================   =====================================================

